<resources>
    <string name="app_name">Classroom</string>
    <string name="app_nameBeta">Classroom Beta</string>
    <string name="greet">Halo!</string>
    <string name="feedback">Saran</string>
    <string name="feedbackBeta">Beta Feedback</string>
    <string name="pengurus_kelas">Pengurus Kelas</string>
    <string name="piket">Piket</string>
    <string name="laporanPiket">Laporan Piket</string>
    <string name="pelajaran">Pelajaran</string>
    <string name="hari">Hari</string>
    <string name="tanggal">Tanggal</string>
    <string name="automaticDataFill">Isi data otomatis</string>
    <string name="manualDataFill">Isi data manual</string>
    <string name="hintRuangan">Ruangan (contoh: 01)</string>
    <string name="keteranganKetuntasan">Keterangan Ketuntasan</string>
    <string name="hintKeteranganTambahan">Keterangan Tambahan</string>
    <string name="kirim">Kirim</string>
    <string name="watermark">Dibuat otomatis oleh Classroom pada</string>

    <string-array name="hari">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
    </string-array>

    // Start of penugasan piket
    <string name="PK1">Menyapu</string>
    <string name="PK2">Mengepel</string>
    <string name="PK3">Membersihkan papan tulis</string>
    <string name="PS1">Pengecekan alat elektronik (AC, Kipas, Projector)</string>
    <string name="PS2">Tata letak</string>
    <string name="PS3">Pengembalian sarana dan prasarana</string>
    <string-array name="penugasanPiket">
        <item>@string/PK1</item>
        <item>@string/PK2</item>
        <item>@string/PK3</item>
        <item>@string/PS1</item>
        <item>@string/PS2</item>
        <item>@string/PS3</item>
    </string-array>
    // End of penugasan piket

    // Start of Senin
    <string name="senin">Senin</string>
    <string name="pelajaran.senin">Pelajaran Senin</string>
    <string name="piket.senin">Piket Senin</string>
    <string name="piket.senin1">Asmaul Sufarhansyah</string>
    <string name="piket.senin2">M. Alkausar Ramadhan</string>
    <string name="piket.senin3">Kemas M. Rafli</string>
    <string name="piket.senin4">Aqli Hamdan</string>
    <string name="piket.senin5">Akmal Nadif</string>
    <string name="piket.senin6">Sigit Andreas</string>
    <string-array name="senin">
        <item>@string/senin</item>
        <item>@string/pelajaran.senin</item>
        <item>@string/piket.senin</item>
        <item>@string/piket.senin1</item>
        <item>@string/piket.senin2</item>
        <item>@string/piket.senin3</item>
        <item>@string/piket.senin4</item>
        <item>@string/piket.senin5</item>
        <item>@string/piket.senin6</item>
    </string-array>
    // End of Senin

    // Start of Selasa
    <string name="selasa">Selasa</string>
    <string name="pelajaran.selasa">Pelajaran Selasa</string>
    <string name="piket.selasa">Piket Selasa</string>
    <string name="piket.selasa1">Imam Mardani</string>
    <string name="piket.selasa2">Rizky Surya</string>
    <string name="piket.selasa3">Putriana Alfatikasari</string>
    <string name="piket.selasa4">M. Hadyan Amrillah</string>
    <string name="piket.selasa5">Rheza Ardhiva</string>
    <string name="piket.selasa6">Maulana Yusuf</string>
    <string-array name="selasa">
        <item>@string/selasa</item>
        <item>@string/pelajaran.selasa</item>
        <item>@string/piket.selasa</item>
        <item>@string/piket.selasa1</item>
        <item>@string/piket.selasa2</item>
        <item>@string/piket.selasa3</item>
        <item>@string/piket.selasa4</item>
        <item>@string/piket.selasa5</item>
        <item>@string/piket.selasa6</item>
    </string-array>
    // End of Selasa

    // Start of Rabu
    <string name="rabu">Rabu</string>
    <string name="pelajaran.rabu">Pelajaran Rabu</string>
    <string name="piket.rabu">Piket Rabu</string>
    <string name="piket.rabu1">Aditya Augustaf</string>
    <string name="piket.rabu2">Nabil Arfian</string>
    <string name="piket.rabu3">M. Syaiful Iskandar</string>
    <string name="piket.rabu4">Natasya Pramudita L.</string>
    <string name="piket.rabu5">Rizki Fadilla</string>
    <string name="piket.rabu6">Istiq Harun K. M.</string>
    <string-array name="rabu">
        <item>@string/rabu</item>
        <item>@string/pelajaran.rabu</item>
        <item>@string/piket.rabu</item>
        <item>@string/piket.rabu1</item>
        <item>@string/piket.rabu2</item>
        <item>@string/piket.rabu3</item>
        <item>@string/piket.rabu4</item>
        <item>@string/piket.rabu5</item>
        <item>@string/piket.rabu6</item>
    </string-array>
    // End of Rabu

    // Start of Kamis
    <string name="kamis">Kamis</string>
    <string name="pelajaran.kamis">Pelajaran Kamis</string>
    <string name="piket.kamis">Piket Kamis</string>
    <string name="piket.kamis1">M. Hikmal Ramadhani</string>
    <string name="piket.kamis2">Diantama Maulana</string>
    <string name="piket.kamis3">M. Fatah Hidayat</string>
    <string name="piket.kamis4">M. Rizki Andika</string>
    <string name="piket.kamis5">Eki Lanjar Syabani</string>
    <string name="piket.kamis6">Fitriyani Gita Tabila</string>
    <string-array name="kamis">
        <item>@string/kamis</item>
        <item>@string/pelajaran.kamis</item>
        <item>@string/piket.kamis</item>
        <item>@string/piket.kamis1</item>
        <item>@string/piket.kamis2</item>
        <item>@string/piket.kamis3</item>
        <item>@string/piket.kamis4</item>
        <item>@string/piket.kamis5</item>
        <item>@string/piket.kamis6</item>
    </string-array>
    // End of Kamis

    // Start of Jumat
    <string name="jumat">Jumat</string>
    <string name="pelajaran.jumat">Pelajaran Jumat</string>
    <string name="piket.jumat">Piket Jumat</string>
    <string name="piket.jumat1">Riki Kusworo</string>
    <string name="piket.jumat2">M. Muhyi Rasyidin</string>
    <string name="piket.jumat3">Fandi Arya P.</string>
    <string name="piket.jumat4">Pramudya Satrio B.</string>
    <string name="piket.jumat5">Farhan Hasbiy</string>
    <string name="piket.jumat6">Kevin Surya Augusto</string>
    <string-array name="jumat">
        <item>@string/jumat</item>
        <item>@string/pelajaran.jumat</item>
        <item>@string/piket.jumat</item>
        <item>@string/piket.jumat1</item>
        <item>@string/piket.jumat2</item>
        <item>@string/piket.jumat3</item>
        <item>@string/piket.jumat4</item>
        <item>@string/piket.jumat5</item>
        <item>@string/piket.jumat6</item>
    </string-array>
    // End of Jumat

    // Start of Sabtu
    <string name="sabtu">Sabtu</string>
    <string name="pelajaran.sabtu">Pelajaran Sabtu</string>
    <string name="piket.sabtu">Piket Sabtu</string>
    <string name="piket.sabtu1">Luthfi Ali Qodri</string>
    <string name="piket.sabtu2">Noviardita Ramadhani</string>
    <string name="piket.sabtu3">Ardian Figo</string>
    <string name="piket.sabtu4">Fajar Julianto</string>
    <string name="piket.sabtu5">M. Riztaffa Firli</string>
    <string-array name="sabtu">
        <item>@string/sabtu</item>
        <item>@string/pelajaran.sabtu</item>
        <item>@string/piket.sabtu</item>
        <item>@string/piket.sabtu1</item>
        <item>@string/piket.sabtu2</item>
        <item>@string/piket.sabtu3</item>
        <item>@string/piket.sabtu4</item>
        <item>@string/piket.sabtu5</item>
    </string-array>
</resources>
