<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.dtek.andika.classroom.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/laporanPiket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/laporanPiket"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="Pengisian data untuk:"/>

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ruang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintRuangan"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/keteranganKetuntasan" />
            <CheckBox
                android:id="@+id/menyapu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PK1" />
            <CheckBox
                android:id="@+id/mengepel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PK2" />
            <CheckBox
                android:id="@+id/papanTulis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PK3" />
            <CheckBox
                android:id="@+id/alatElektronik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PS1" />
            <CheckBox
                android:id="@+id/tataLetak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PS2" />
            <CheckBox
                android:id="@+id/sarpras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PS3" />
            <Button
                android:id="@+id/kirimLaporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kirim"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>